--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
 </div>
-    <button class="add-to-cart-btn" onclick="addToCart('PUMA SUEDE CLASSIC BLACK', 2199, 'https://vers-virid.vercel.app/css image/PUMA SUEDE CLASSIC(BLACK).WEBP') style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+    <button class="add-to-cart-btn" onclick="addToCart('PUMA SUEDE CLASSIC BLACK', 2199, 'https://vers-virid.vercel.app/css image/PUMA SUEDE CLASSIC(BLACK).WEBP')"style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
     Add to Cart
 </button>
     </div>
@@ -636,7 +636,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/TIGER MEXICO GREEN.webp" alt="TIGER MEXICO">
+      <img src="css image/tiger mexico green.webp" alt="TIGER MEXICO">
     </div>
     <div class="product-details">
       <h3>TIGER MEXICO GREEN<h3>
@@ -652,7 +652,7 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
 </div>
-    <button class="add-to-cart-btn" onclick="addToCart('PUMA SUEDE CLASSIC BLACK', 2199, 'https://vers-virid.vercel.app/css image/TIGER MEXICO GREEN.WEBP') style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+    <button class="add-to-cart-btn" onclick="addToCart('PUMA SUEDE CLASSIC BLACK', 2199, 'https://vers-virid.vercel.app/css image/TIGER MEXICO GREEN.WEBP')"style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
     Add to Cart
 </button>
     </div>
@@ -739,6 +739,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
