--- a/index.html
+++ b/index.html
@@ -696,9 +696,11 @@ function toggleDetails(id) {
     </div>
   </section>
   <footer>
+    <CENTER>
     <p>T&C</p>
     <P>.THE DELIVERY WILL BE TAKE 3-5WORKING DAYS<BR>.THE I PRODUCT WILL RE-TURNE<BR>.WHEN THERE IS ANY DAMGE OR ANY OTHER ISSUES YOU CAN CONTACT OUR CUSTOMER SARVIE CENTER<BR>
       .WE ARE ALL TIME SERVICE </P>
+    </CENTER>
     <p>Connect with us:</p>
     <a href="https://wa.me/919497713316" target="_blank">
       <i class="fab fa-whatsapp"></i> WhatsApp
@@ -742,6 +744,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
