--- a/index.html
+++ b/index.html
@@ -698,8 +698,10 @@ function toggleDetails(id) {
   <footer>
     <CENTER>
     <p>T&C</p>
-    <P>.THE DELIVERY WILL BE TAKE 3-5WORKING DAYS<BR>.THE I PRODUCT WILL RE-TURNE<BR>.WHEN THERE IS ANY DAMGE OR ANY OTHER ISSUES YOU CAN CONTACT OUR CUSTOMER SARVIE CENTER<BR>
-      .WE ARE ALL TIME SERVICE </P>
+    <P>.THE DELIVERY WILL BE TAKE 3-5WORKING DAYS</P>
+      <P>THE I PRODUCT WILL RE-TURNE</P>
+      <p>WHEN THERE IS ANY DAMGE OR ANY OTHER ISSUES YOU CAN CONTACT OUR CUSTOMER SARVIE CENTER</P>
+      <P>WE ARE ALL TIME SERVICE </P>
     </CENTER>
     <p>Connect with us:</p>
     <a href="https://wa.me/919497713316" target="_blank">
@@ -744,6 +746,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
