--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ function toggleDetails(id) {
   <footer>
     <p>T&C</p>
       <P>THE DELIVERY WILL BE TAKE 3-5WORKING DAYS</P>
-      <P>THE I PRODUCT WILL RE-TURNE</P>
+      <P>THE PRODUCT WILL NOT HAVE RE-TURNE POLICY</P>
       <p>WHEN THERE IS ANY DAMGE OR ANY OTHER ISSUES YOU CAN CONTACT OUR CUSTOMER SARVIE CENTER</P>
       <P>WE ARE ALL TIME SERVICE </P>
     <p>Connect with us:</p>
@@ -744,6 +744,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
