--- a/index.html
+++ b/index.html
@@ -699,9 +699,8 @@ function toggleDetails(id) {
     <p>T&C</p>
       <P>THE DELIVERY WILL BE TAKE 3-5WORKING DAYS</P>
       <P>THE PRODUCT WILL NOT HAVE RE-TURNE POLICY</P>
-      <p>WHEN THERE IS ANY DAMGE OR ANY OTHER ISSUES YOU CAN CONTACT OUR CUSTOMER SARVIE CENTER</P>
-      <P>WE ARE ALL TIME SERVICE </P>
-    <p>Connect with us:</p>
+      <p>WHEN THERE IS ANY DAMGE OR ANY OTHER ISSUES YOU CAN CONTACT OUR CUSTOMER CARE</P>
+     <p>Connect with us:</p>
     <a href="https://wa.me/919497713316" target="_blank">
       <i class="fab fa-whatsapp"></i> WhatsApp
     </a>
@@ -744,6 +743,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
