--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="CSS IMAGE/AIR JORDAN 23.WEBP" alt="AIR JORDAN">
+      <img src="CSS IMAGE/AIR JORDAN 23.webp" alt="AIR JORDAN">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN</h3>
@@ -826,7 +826,7 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
 </div>
-    <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 2199, 'https://vers-virid.vercel.app/css image/AIR JORDAN 23.WEBP')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+    <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 2199, 'https://vers-virid.vercel.app/css image/AIR JORDAN 23.webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
     Add to Cart
 </button>
     </div>
@@ -834,7 +834,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/AIR JORDAN 1 MID (BLACK).WEBP" alt="AIR JORDAN">
+      <img src="css image/AIR JORDAN 1 MID (BLACK).webp" alt="AIR JORDAN">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN</h3>
@@ -856,7 +856,7 @@ footer .social:hover {
     </select>
       </div>
       
-      <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 3000, 'https://vers-virid.vercel.app/css image/AIR JORDAN 1 MID (BLACK).WEBP')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+      <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 3000, 'https://vers-virid.vercel.app/css image/AIR JORDAN 1 MID (BLACK).webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    add to cart
       </div>
   </div>
@@ -922,6 +922,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
