--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="CSS IMAGE/tiger mexico 66 sd.webp" alt="TIGER MEXICO">
+      <img src="css image/tiger mexico 66 sd.webp" alt="TIGER MEXICO">
     </div>
     <div class="product-details">
       <h3>TIGER MEXICO 66 SD</h3>
@@ -805,7 +805,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="CSS IMAGE/AIR JORDAN 23.webp" alt="AIR JORDAN">
+      <img src="css image/AIR JORDAN 23.webp" alt="AIR JORDAN">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN</h3>
@@ -922,6 +922,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
