--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/AIR JORDAN 23.webp" alt="AIR JORDAN">
+      <img src="css image/air jordan 23.webp" alt="AIR JORDAN">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN</h3>
@@ -922,6 +922,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
