ADDED NEW ITEMS.HTML

--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/AIR JORDAN 1 RETRO LOW.WEBP" alt="AIR JORDAN">
+      <img src="css image/AIR JORDAN 1 RETRO LOW.webp" alt="AIR JORDAN">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN</h3>
@@ -885,7 +885,7 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
 </div>
-    <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 2199, 'https://vers-virid.vercel.app/css image/AIR JORDAN 1 RETRO LOW.WEBP')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+    <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 2199, 'https://vers-virid.vercel.app/css image/AIR JORDAN 1 RETRO LOW.webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
     Add to Cart
 </button>
     </div>
@@ -893,7 +893,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/AIR JORDAN 1 PANDA LOW.webp" alt="AIR JORDAN">
+      <img src="css image/AIR JORDAN 1 panda LOW.webp" alt="AIR JORDAN">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN</h3>
@@ -915,7 +915,7 @@ footer .social:hover {
     </select>
       </div>
       
-      <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 3000, 'https://vers-virid.vercel.app/css image/AIR JORDAN 1 PANDA LOW.webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+      <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 3000, 'https://vers-virid.vercel.app/css image/AIR JORDAN 1 panda LOW.webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    add to cart
       </div>
   </div>
@@ -923,7 +923,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/AIR-JORDAN-1-low-bread-loe.webp" alt="AIR JORDAN">
+      <img src="css image/AIR-JORDAN-1-Low-bread-toe.webp" alt="AIR JORDAN">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN</h3>
@@ -944,7 +944,7 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
 </div>
-    <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 2199, 'https://vers-virid.vercel.app/css image/AIR-JORDAN-1-low-bread-loe.webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+    <button class="add-to-cart-btn" onclick="addToCart('AIR JORDAN', 2199, 'https://vers-virid.vercel.app/css image/AIR-JORDAN-1-Low-bread-toe.webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
     Add to Cart
 </button>
     </div>
@@ -1040,6 +1040,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
