--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/AIR-JORDAN-1-Low-bread-toe.webp" alt="AIR JORDAN">
+      <img src="css image/Air-jordan-1-Low-bread-toe.webp" alt="AIR JORDAN">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN</h3>
@@ -952,7 +952,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/NIKE DUNK LOW(BLACK).jpg" alt="nike dunk">
+      <img src="css image/NIKE DUNK LOW(black).jpg" alt="nike dunk">
     </div>
     <div class="product-details">
       <h3>NIKE DUNK<BR>BLACK</h3>
@@ -974,7 +974,7 @@ footer .social:hover {
     </select>
       </div>
       
-      <button class="add-to-cart-btn" onclick="addToCart('NIKE DUNK BLACK', 3000, 'https://vers-virid.vercel.app/css image/NIKE DUNK LOW(BLACK).jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+      <button class="add-to-cart-btn" onclick="addToCart('NIKE DUNK BLACK', 3000, 'https://vers-virid.vercel.app/css image/NIKE DUNK LOW(black).jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    add to cart
       </div>
   </div>
@@ -1040,6 +1040,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
