--- a/index.html
+++ b/index.html
@@ -606,6 +606,7 @@ footer .social:hover {
   <div class="product-card">
     <div class="image-container">
       <img src="css image/puma-blue-349.jpg" alt="puma eesy">
+      <img src="css image/suede-classic-xxi-sneakers.webp" alt="puma eesy">
     </div>
     <div class="product-details">
       <h3>puma suede</h3>
@@ -1050,6 +1051,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
