--- a/index.html
+++ b/index.html
@@ -392,12 +392,12 @@ footer .social:hover {
    add to cart
       </div>
   </div>
-asdfghj
+  
 <div class="product-grid">
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/joordan-blue.jpg" alt="nike jordan">
+      <img src="css image/joordan-gold.jpg" alt="nike jordan">
     </div>
     <div class="product-details">
       <h3>nike jordan</h3>
@@ -419,7 +419,7 @@ asdfghj
     </select>
        </div>
          
-     <button class="add-to-cart-btn" onclick="addToCart('NIKE JORDAN', 2799, 'https://vers-virid.vercel.app/css image/joordan-blue.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+     <button class="add-to-cart-btn" onclick="addToCart('NIKE JORDAN', 2799, 'https://vers-virid.vercel.app/css image/joordan-gold.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    ADD TO CART
     </div>
   </div>
@@ -511,6 +511,7 @@ asdfghj
    ADD TO CART
     </div>
   </div>
+  
 <div class="product-grid">
 
   <div class="product-card">
@@ -1049,6 +1050,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
