--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/joordan-gold.jpg" alt="nike jordan">
+      <img src="css image/jordan-gold.jpg" alt="nike jordan">
     </div>
     <div class="product-details">
       <h3>nike jordan</h3>
@@ -419,7 +419,7 @@ footer .social:hover {
     </select>
        </div>
          
-     <button class="add-to-cart-btn" onclick="addToCart('NIKE JORDAN', 2799, 'https://vers-virid.vercel.app/css image/joordan-gold.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+     <button class="add-to-cart-btn" onclick="addToCart('NIKE JORDAN', 2799, 'https://vers-virid.vercel.app/css image/jordan-gold.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    ADD TO CART
     </div>
   </div>
@@ -1050,6 +1050,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
