--- a/index.html
+++ b/index.html
@@ -363,6 +363,8 @@ footer .social:hover {
 </button>
     </div>
   </div>
+  
+<div class="product-grid">
 
   <div class="product-card">
     <div class="image-container">
@@ -563,6 +565,7 @@ footer .social:hover {
         <option value="9.5">9.5</option> 
         <option value="10">10</option>
     </select>
+     </div>
      </div>
       
          <button class="add-to-cart-btn" onclick="addToCart('NIKE JORDAN', 3,000, 'https://vers-virid.vercel.app/css image/nike jordan(voilet).jpeg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
@@ -1048,6 +1051,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
